@@ -1,8 +1,9 @@
 bubba-frontend (1.9.52) karmic; urgency=low
 
   * Changed 'disabled' fields to readonly. Closes #806 
+  * Styled "add to album" popup. Closes #1329 
 
- -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 20:22:47 +0200
+ -- PA Nilsson <pa@excito.com>  Mon, 05 Apr 2010 20:56:39 +0200
 
 bubba-frontend (1.9.51) karmic; urgency=low
 
